--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,15 @@
         android:id="@+id/flashcard_question"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="  #4A919E "
         android:gravity="center"
-        android:layout_margin="15dp"
-        android:textSize="40sp"
-        android:text="Who is the 44th President of the United States?"/>
+        android:text="Who is the 44th President of the United States?"
+        android:textColor="#FFFF"
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/flashcard_answer"
@@ -23,8 +28,10 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
+        android:background="  #F5DF4D "
         android:gravity="center"
         android:text="Barack Obama"
+        android:textColor="#FFFF"
         android:textSize="40sp"
         android:visibility="invisible" />
 
