--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:background="  #4A919E "
+        android:background="@drawable/card_background_question"
+        android:elevation="5dp"
         android:gravity="center"
         android:text="Who is the 44th President of the United States?"
         android:textColor="#FFFF"
@@ -28,7 +29,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:background="  #F5DF4D "
+        android:background="@drawable/card_background_answer"
         android:gravity="center"
         android:text="Barack Obama"
         android:textColor="#FFFF"
