--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="20dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -38,55 +37,19 @@
         android:visibility="invisible" />
 
     <RelativeLayout
-        android:id="@+id/rl_choice"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@id/flashcard_question">
-
-        <TextView
-            android:id="@+id/txt_A"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/card_background_choice"
-            android:gravity="center"
-            android:text="Bill Clinton"
-            android:textColor="#FFFF"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/txt_B"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@id/txt_A"
-            android:layout_margin="10dp"
-            android:background="@drawable/card_background_choice"
-            android:gravity="center"
-            android:text="Georges H. W. Bush"
-            android:textColor="#FFFF"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/txt_C"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@id/txt_B"
-            android:layout_margin="10dp"
-            android:background="@drawable/card_background_choice"
-            android:gravity="center"
-            android:text="Barack Obama"
-            android:textColor="#FFFF"
-            android:textSize="24sp" />
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/toggle_choices_visibility"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/eye_lined"/>
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp">
 
-
+        <ImageView
+            android:id="@+id/bt_add"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/plus_circle_lined" />
+    </RelativeLayout>
 </RelativeLayout>
