--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,10 @@
     <style name="Base.Theme.FlashcardApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="colorControlNormal">#CFCCCC</item>
+        <item name="colorControlActivated">#d32f2f</item>
+
     </style>
 
     <style name="Theme.FlashcardApp" parent="Base.Theme.FlashcardApp" />
