--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -49,5 +49,12 @@
             android:layout_height="80dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/x_mark_circle_lined" />
+
+        <ImageView
+            android:id="@+id/bt_save"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/save" />
     </RelativeLayout>
 </RelativeLayout>
