--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,5 +51,12 @@
             android:layout_height="80dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/plus_circle_lined" />
+
+        <ImageView
+            android:id="@+id/bt_edit"
+            android:layout_width="70dp"
+            android:layout_height="80dp"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/edit" />
     </RelativeLayout>
 </RelativeLayout>
