--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -33,32 +33,32 @@
         android:ems="10"
         android:hint="Enter The Answer here"
         android:inputType="text|textMultiLine" />
-    <EditText
-        android:id="@+id/etoption1"
-        android:layout_width="350dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/etanswer"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:ems="10"
-        android:hint="Enter Wrong Answer Option Here"
-        android:inputType="text|textMultiLine" />
-    <EditText
-        android:id="@+id/etoption2"
-        android:layout_width="350dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/etoption1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:ems="10"
-        android:hint="Enter Another Wrong Answer Option Here"
-        android:inputType="text|textMultiLine" />
+<!--    <EditText-->
+<!--        android:id="@+id/etoption1"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_below="@id/etanswer"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginEnd="20dp"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Enter Wrong Answer Option Here"-->
+<!--        android:inputType="text|textMultiLine" />-->
+<!--    <EditText-->
+<!--        android:id="@+id/etoption2"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_below="@id/etoption1"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginEnd="20dp"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Enter Another Wrong Answer Option Here"-->
+<!--        android:inputType="text|textMultiLine" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -71,15 +71,15 @@
 
         <ImageView
             android:id="@+id/bt_cancel"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/x_mark_circle_lined" />
 
         <ImageView
             android:id="@+id/bt_save"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:src="@drawable/save" />
     </RelativeLayout>
