--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,48 +36,48 @@
         android:textSize="40sp"
         android:visibility="invisible" />
 
-    <RelativeLayout
-        android:id="@+id/rl_choice"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@id/flashcard_question">
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/rl_choice"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="300dp"-->
+<!--        android:layout_below="@id/flashcard_question">-->
 
-        <TextView
-            android:id="@+id/txt_A"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/card_background_choice"
-            android:gravity="center"
-            android:text="Bill Clinton"
-            android:textColor="#FFFF"
-            android:textSize="24sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/txt_A"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:background="@drawable/card_background_choice"-->
+<!--            android:gravity="center"-->
+<!--            android:text="Bill Clinton"-->
+<!--            android:textColor="#FFFF"-->
+<!--            android:textSize="24sp" />-->
 
-        <TextView
-            android:id="@+id/txt_B"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@id/txt_A"
-            android:layout_margin="10dp"
-            android:background="@drawable/card_background_choice"
-            android:gravity="center"
-            android:text="Georges H. W. Bush"
-            android:textColor="#FFFF"
-            android:textSize="24sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/txt_B"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_below="@id/txt_A"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:background="@drawable/card_background_choice"-->
+<!--            android:gravity="center"-->
+<!--            android:text="Georges H. W. Bush"-->
+<!--            android:textColor="#FFFF"-->
+<!--            android:textSize="24sp" />-->
 
-        <TextView
-            android:id="@+id/txt_C"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@id/txt_B"
-            android:layout_margin="10dp"
-            android:background="@drawable/card_background_choice"
-            android:gravity="center"
-            android:text="Barack Obama"
-            android:textColor="#FFFF"
-            android:textSize="24sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/txt_C"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_below="@id/txt_B"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:background="@drawable/card_background_choice"-->
+<!--            android:gravity="center"-->
+<!--            android:text="Barack Obama"-->
+<!--            android:textColor="#FFFF"-->
+<!--            android:textSize="24sp" />-->
 
-    </RelativeLayout>
+<!--    </RelativeLayout>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -90,15 +90,15 @@
 
         <ImageView
             android:id="@+id/bt_add"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/plus_circle_lined" />
 
         <ImageView
             android:id="@+id/bt_edit"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:src="@drawable/edit" />
     </RelativeLayout>
