--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,37 +6,54 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/flashcard_question"
+    <ImageView
+        android:id="@+id/iv_empty_card"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/card_background_question"
-        android:elevation="5dp"
-        android:gravity="center"
-        android:text="Who is the 44th President of the United States?"
-        android:textColor="#FFFF"
-        android:textSize="40sp" />
+        android:src="@drawable/empty_card" />
 
-    <TextView
-        android:id="@+id/flashcard_answer"
+    <RelativeLayout
+        android:id="@+id/rl_question_answer"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/card_background_answer"
-        android:gravity="center"
-        android:text="Barack Obama"
-        android:textColor="#FFFF"
-        android:textSize="40sp"
-        android:visibility="invisible" />
+        android:layout_height="wrap_content"
+        android:visibility="invisible">
 
-<!--    <RelativeLayout-->
+        <TextView
+            android:id="@+id/flashcard_question"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/card_background_question"
+            android:elevation="5dp"
+            android:gravity="center"
+            android:text="Who is the 44th President of the United States?"
+            android:textColor="#FFFF"
+            android:textSize="40sp" />
+
+        <TextView
+            android:id="@+id/flashcard_answer"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/card_background_answer"
+            android:gravity="center"
+            android:text="Barack Obama"
+            android:textColor="#FFFF"
+            android:textSize="40sp"
+            android:visibility="invisible" />
+    </RelativeLayout>
+
+    <!--    <RelativeLayout-->
 <!--        android:id="@+id/rl_choice"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="300dp"-->
@@ -80,14 +97,22 @@
 <!--    </RelativeLayout>-->
 
     <RelativeLayout
-        android:id="@+id/RelativeLayout"
+        android:id="@+id/rl_operation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/flashcard_question"
+        android:layout_below="@id/rl_question_answer"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/btn_delete"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/btn_delete" />
 
         <ImageView
             android:id="@+id/btn_next"
