--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,48 +53,6 @@
             android:visibility="invisible" />
     </RelativeLayout>
 
-    <!--    <RelativeLayout-->
-<!--        android:id="@+id/rl_choice"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="300dp"-->
-<!--        android:layout_below="@id/flashcard_question">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/txt_A"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:background="@drawable/card_background_choice"-->
-<!--            android:gravity="center"-->
-<!--            android:text="Bill Clinton"-->
-<!--            android:textColor="#FFFF"-->
-<!--            android:textSize="24sp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/txt_B"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_below="@id/txt_A"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:background="@drawable/card_background_choice"-->
-<!--            android:gravity="center"-->
-<!--            android:text="Georges H. W. Bush"-->
-<!--            android:textColor="#FFFF"-->
-<!--            android:textSize="24sp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/txt_C"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_below="@id/txt_B"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:background="@drawable/card_background_choice"-->
-<!--            android:gravity="center"-->
-<!--            android:text="Barack Obama"-->
-<!--            android:textColor="#FFFF"-->
-<!--            android:textSize="24sp" />-->
-
-<!--    </RelativeLayout>-->
 
     <RelativeLayout
         android:id="@+id/rl_operation"
@@ -120,6 +78,50 @@
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/btn_next" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_choice"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_below="@id/rl_operation"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/txt_A"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/card_background_choice"
+            android:gravity="center"
+            android:text="Bill Clinton"
+            android:textColor="#FFFF"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/txt_B"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/txt_A"
+            android:layout_margin="10dp"
+            android:background="@drawable/card_background_choice"
+            android:gravity="center"
+            android:text="Georges H. W. Bush"
+            android:textColor="#FFFF"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/txt_C"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/txt_B"
+            android:layout_margin="10dp"
+            android:background="@drawable/card_background_choice"
+            android:gravity="center"
+            android:text="Barack Obama"
+            android:textColor="#FFFF"
+            android:textSize="24sp" />
+
     </RelativeLayout>
 
     <RelativeLayout
