--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="16"
+        android:textColor="#F85252"
+        android:textSize="20sp" />
+
     <ImageView
         android:id="@+id/iv_empty_card"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_below="@id/timer"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
@@ -20,16 +34,18 @@
         android:id="@+id/rl_question_answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible">
+        android:layout_below="@id/timer"
+        android:layout_margin="5dp"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/flashcard_question"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/card_background_question"
             android:elevation="5dp"
             android:gravity="center"
@@ -41,10 +57,7 @@
             android:id="@+id/flashcard_answer"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_margin="5dp"
             android:background="@drawable/card_background_answer"
             android:gravity="center"
             android:text="Barack Obama"
@@ -60,9 +73,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_question_answer"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:visibility="visible">
 
         <ImageView
@@ -83,8 +95,11 @@
     <RelativeLayout
         android:id="@+id/rl_choice"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="260dp"
         android:layout_below="@id/rl_operation"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:visibility="invisible">
 
         <TextView
