--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,12 @@
             android:background="@drawable/card_background_question"
             android:elevation="5dp"
             android:gravity="center"
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp"
             android:text="Who is the 44th President of the United States?"
             android:textColor="#FFFF"
             android:textSize="40sp" />
@@ -113,6 +119,10 @@
             android:textColor="#FFFF"
             android:textSize="24sp" />
 
+        <nl.dionsegijn.konfetti.xml.KonfettiView
+            android:id="@+id/KonfettiView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
         <TextView
             android:id="@+id/txt_B"
             android:layout_width="match_parent"
