--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/timer"
         android:layout_margin="5dp"
-        android:visibility="visible">
+        >
 
         <TextView
             android:id="@+id/flashcard_question"
@@ -63,13 +63,16 @@
             android:id="@+id/flashcard_answer"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/card_background_answer"
             android:gravity="center"
             android:text="Barack Obama"
             android:textColor="#FFFF"
             android:textSize="40sp"
-            android:visibility="invisible" />
+            />
     </RelativeLayout>
 
 
